# jdinbot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bot.0.0.py  bot.0.0_1.py  bot.bet.0.0.py  bot.ref.0.0.py  bot.ref.0.1.py  bot.sol.0.0.py  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jdin_bot.db  pyproject.toml  requirements.txt  structure.pgsql
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
app/bd/: models.py
app/bot/handlers/: __init__.py
docker/: entrypoint.py  entrypoint.sh
docker/scripts/: wait-for-it.sh
docs/api/: health.rst  index.rst
scripts/: build.py  build.sh
src/: config.py  main.py
src/app/db/: engine.py
src/app/db/models/: transactions.py  user.py
src/bd/: engine.py
src/bot/: comands.py
src/db/: dbconfiguration.py  solanaRequest.py  taxrequest.py
src/gamble/: comands.py
src/jdinbot/: config.py  main.py
src/jdinbot/api/v1/: routers.py
src/jdinbot/api/v1/endpoints/: health.py
src/jdinbot/bot/handlers/: common.py
src/jdinbot/bot/handlers/commands/: start.py
src/jdinbot/core/: config.py  logging.py
src/jdinbot/db/: engine.py
src/jdinbot/db/migrations/versions/: add_user_model.py
src/jdinbot/db/models/: user.py
src/referal/: comands.py
src/solana/: comands.py
tests/integration/: test_api.py  test_db.py
tests/unit/: test_bot_start.py  test_models.py
